--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Mafia",
+  "name": "Barboza",
   "version": "2.2.0",
   "description": "Super WhatsApp Bot Multi Device",
   "main": "index.js",
   "type": "module",
   "directories": {
     "lib": "lib",
-    "src": "src",
+    "src": "storage",
     "plugins": "plugins"
   },
   "scripts": {
@@ -18,16 +18,16 @@
     "eslint": "eslint .",
     "eslintfix": "eslint --fix ."
   },
-  "homepage": "https://github.com/TanjiroPro/FreeFire.git",
+  "homepage": "https://github.com/meldexzz/bolibotmensual.git",
   "author": {
-    "name": "TanjiroPro"
+    "name": "meldexzz"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/TanjiroPro/FreeFire.git"
+    "url": "https://github.com/meldexzz/bolibotmensual.git"
   },
   "bugs": {
-    "url": "https://github.com/TanjiroPro/FreeFire.git"
+    "url": "https://github.com/meldexzz/bolibotmensual.git"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
@@ -37,7 +37,7 @@
     "@ibaraki-douji/pixivts": "^2.4.1",
     "@octokit/rest": "^21.1.1",
     "@vitalets/google-translate-api": "^8.0.0",
-         "@whiskeysockets/baileys": "github:ds6/meta",
+    "@whiskeysockets/baileys":   "github:ds6/meta",
     "@xct007/frieren-scraper": "^0.0.2",
     "acrcloud": "^1.4.0",
     "api-dylux": "^1.7.2",
@@ -57,7 +57,7 @@
     "formdata-node": "^5.0.0",
     "g-i-s": "^2.1.6",
     "google-it": "^1.6.4",
-    "google-libphonenumber": "3.2.38",
+    "google-libphonenumber": "^3.2.38",
     "gradient-string": "^2.0.2",
     "hispamemes": "^1.0.7",
     "human-readable": "^0.2.1",
@@ -86,13 +86,12 @@
     "readline": "^1.3.0",
     "ruhend-scraper": "^7.0.4",
     "sanzy-spotifydl": "*",
-    "senna-fg": "latest",
     "similarity": "^1.2.1",
     "socket.io": "^4.5.2",
     "syntax-error": "^1.4.0",
     "terminal-image": "^2.0.0",
     "translate-google-api": "^1.0.4",
-    "url-file-size": "^1.0.5-1",
+    "url-file-size": "^1.0.5",
     "url-regex-safe": "^3.0.0",
     "uuid": "^10.0.0",
     "yargs": "^17.3.1",
